--- a/package.json
+++ b/package.json
@@ -8,21 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/codemod": "^4.5.0",
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
-    "apollo-boost": "^0.4.7",
-    "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
+    "cross-env": "^6.0.3",
+    "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "9.1.5",
-    "next-with-apollo": "^4.3.0",
+    "next": "9.1.6",
     "react": "16.12.0",
-    "react-apollo": "^3.1.3",
     "react-dom": "16.12.0"
-  },
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "graphql-tools": "^4.0.6"
   }
 }
