--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@material-ui/icons": "^4.5.1",
     "cross-env": "^6.0.3",
     "express": "^4.17.1",
+    "formik": "^2.0.8",
     "isomorphic-unfetch": "^3.0.0",
     "mysql": "^2.17.1",
     "next": "9.1.6",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "styled-components": "^4.4.1",
     "util": "^0.12.1"
   },
   "devDependencies": {
